python/src/rabbitmq/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  serviceName: 'not-applicable'
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            # to access GUI
            - name: http
              protocol: TCP
              containerPort: 15672
            # for sending messages to the queue
            - name: amqp
              protocol: TCP
              containerPort: 5672
          volumeMounts:
            # where in our container we want our physical storage volume to mount to
            # This is where RabbitMQ persists queues and messages
            - mountPath: '/var/lib/rabbitmq'
              name: rabbitmq-volume
      volumes:
        - name: rabbitmq-volume
          # creates persistent volume resource and link the StatefulSet to it
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
