python/src/rabbitmq/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  # Only accessible from within the cluster
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    # port for RabbitMQ GUI
    # need an ingress to access it from the browser
    - name: http
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
